--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.72"
     implementation 'androidx.core:core-ktx:1.3.1'
 
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
@@ -46,18 +47,14 @@ dependencies {
     implementation 'org.koin:koin-android:2.0.1'
     implementation "org.koin:koin-androidx-ext:2.0.1"
 
-    //RxJava
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-
     //Kotlin Coroutines
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.4"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.6"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.6'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.8.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.retrofit2:converter-scalars:2.8.1'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.8.1'
 
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:4.6.0'
