--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.6.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.github.dhaval2404:colorpicker:1.2.1'
+    implementation "com.github.skydoves:colorpickerpreference:2.0.2"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
